Fix overflow #day23

--- a/src/style/days/day23.scss
+++ b/src/style/days/day23.scss
@@ -192,6 +192,7 @@ $duration: 3s;
     flex-direction: column;
     height: 100%;
     justify-content: center;
+    overflow: hidden;
     position: relative;
     width: 100%;
   }
